update nginx example

--- a/examples/example.nginx.conf
+++ b/examples/example.nginx.conf
@@ -5,7 +5,7 @@ server {
     ssl_certificate fullchain.pem;
     ssl_certificate_key privkey.pem;
 
-    location ~ ^/webhooks/(set,docs)$ {
+    location ~ ^/webhooks/(set|docs|profiles)$ {
         proxy_pass http://localhost:8000/$1;
         auth_basic "protected";
         auth_basic_user_file webhooks.htpasswd;
@@ -13,6 +13,12 @@ server {
 
     location ~ ^/webhooks/delete/(.*)$ {
         proxy_pass http://localhost:8000/delete/$1;
+        auth_basic "protected";
+        auth_basic_user_file webhooks.htpasswd;
+    }
+
+    location ~ ^/webhooks/profile/(.*)$ {
+        proxy_pass http://localhost:8000/profile/$1;
         auth_basic "protected";
         auth_basic_user_file webhooks.htpasswd;
     }
